--- a/client/lib/components/newsfeed/sub_item/view.html
+++ b/client/lib/components/newsfeed/sub_item/view.html
@@ -1,17 +1,17 @@
 <template name="subNewsFeedPost">
   <div class="social-comment">
     <a class="pull-left" href="#">
-      <img src="{{profilePicture state$subNewsFeedPost.createdBy}}" alt="image" />
+      <img src="{{profilePicture state$post.createdBy}}" alt="image" />
     </a>
-    <div class="media-body" data-id="{{state$subNewsFeedPost._id}}" id="{{state$subNewsFeedPost.createdBy}}">
+    <div class="media-body" data-id="{{state$post._id}}" id="{{state$post.createdBy}}">
       <span>
-        <a href="#" class="pull-left">{{username state$subNewsFeedPost.createdBy}} &nbsp;&nbsp;</a>  {{{state$subNewsFeedPost.text}}}
+        <a href="#" class="pull-left">{{username state$post.createdBy}} &nbsp;&nbsp;</a>  {{{state$post.text}}}
       </span>
       <a href="#" class="small like-post">
         <i class="fa fa-thumbs-up"></i> 
         {{#if state$liked}} You and {{else}} {{/if}} {{state$likesCount}} Like this!
       </a> -
-      <small class="text-muted">{{timeFormattedWithDate state$subNewsFeedPost.createdOn}}</small>
+      <small class="text-muted">{{timeFormattedWithDate state$post.createdOn}}</small>
     </div>
   </div>
 </template>
