moved all modals from main.html

--- a/client/lib/components/stock/modal_list/stock_list/view.html
+++ b/client/lib/components/stock/modal_list/stock_list/view.html
@@ -35,4 +35,9 @@
       </form>
     </div>
   </div>
+  <!-- ADD INGREDIENT-->
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'submitIngredient'}}
+  </div>
+  <!-- /ADD INGREDIENT -->
 </template>
