--- a/client/lib/components/jobItems/edit/view.html
+++ b/client/lib/components/jobItems/edit/view.html
@@ -233,4 +233,10 @@
     </div>
   {{/if}}
   <!-- /INGREDIENTS LIST -->
+
+  <!-- ADD INGREDIENT-->
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'submitIngredient'}}
+  </div>
+  <!-- /ADD INGREDIENT -->
 </template>
