--- a/client/lib/components/jobItems/submit/view.html
+++ b/client/lib/components/jobItems/submit/view.html
@@ -6,12 +6,14 @@
     <form method="get" class="form-horizontal">
       <div class="form-group">
         <label class="col-sm-2 control-label">Name</label>
+
         <div class="col-sm-10">
           <input type="text" name="name" class="form-control" placeholder="Enter Name for the job">
         </div>
-      </div> 
+      </div>
       <div class="form-group">
         <label class="col-sm-2 control-label">Type</label>
+
         <div class="col-sm-10">
           <select name="type" class="form-control changeType">
             {{#each state$jobtypes}}
@@ -23,19 +25,20 @@
             {{/each}}
           </select>
         </div>
-      </div> 
+      </div>
       {{#if isRecurring}}
         <div class="form-group">
           <label class="col-sm-2 control-label">Sections</label>
+
           <div class="col-sm-10">
             <select name="sections" class="form-control">
-            <option value="" selected="selected">Select Section</option>
-            {{#each state$sections}}
-              <option value="{{_id}}">{{name}}</option>
-            {{/each}}
+              <option value="" selected="selected">Select Section</option>
+              {{#each state$sections}}
+                <option value="{{_id}}">{{name}}</option>
+              {{/each}}
             </select>
           </div>
-        </div>    
+        </div>
       {{/if}}
       <div class="form-group">
         {{#if isPrep}}
@@ -44,49 +47,54 @@
           <label class="col-sm-2 control-label">Description</label>
         {{/if}}
         <div class="col-sm-10">
-        {{> render component = 'textEditor' id='jobItemEditorSubmit' 
+          {{> render component = 'textEditor' id='jobItemEditorSubmit'
           initialHtml=state$initialHTML}}
         </div>
       </div>
-      
+
       {{#if isPrep}}
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Ingredients used</label>
-        {{> render component="listOfIngredients"}}
-      </div>
-      {{/if}} 
-      
-      {{#if isPrep}}
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Portions</label>
-        <div class="col-sm-10">
-          <input type="text" name="portions" class="form-control" placeholder="No. of Portions">
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Ingredients used</label>
+          {{> render component="listOfIngredients"}}
         </div>
-      </div>
       {{/if}}
+
       {{#if isPrep}}
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Shelf Life</label>
-        <div class="col-sm-10">
-          <div class="input-group m-b">
-            <input type="text" name="shelfLife" class="form-control" placeholder="Shelf Life">
-            <span class="input-group-addon">Days</span> 
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Portions</label>
+
+          <div class="col-sm-10">
+            <input type="text" name="portions" class="form-control" placeholder="No. of Portions">
           </div>
         </div>
-      </div>
+      {{/if}}
+      {{#if isPrep}}
+        <div class="form-group">
+          <label class="col-sm-2 control-label">Shelf Life</label>
+
+          <div class="col-sm-10">
+            <div class="input-group m-b">
+              <input type="text" name="shelfLife" class="form-control" placeholder="Shelf Life">
+              <span class="input-group-addon">Days</span>
+            </div>
+          </div>
+        </div>
       {{/if}}
       {{#if isRecurring}}
         <div class="form-group">
           <label class="col-sm-2 control-label">Checklist</label>
+
           <div class="col-sm-10">
-            <input type="text" name="checklist" class="form-control addItemToChecklist" placeholder="Add an item to checklist and press enter">
+            <input type="text" name="checklist" class="form-control addItemToChecklist"
+                   placeholder="Add an item to checklist and press enter">
             <br/>
             <ol class="checklist list-group"></ol>
             {{initChecklist}}
           </div>
-        </div> 
+        </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">Frequency</label>
+
           <div class="col-sm-10">
             <select name="frequency" class="form-control changeFrequency">
               <option value="">Select frequency</option>
@@ -101,27 +109,30 @@
           {{#if isRecurringEveryXWeeks}}
             <div class="form-group">
               <label class="col-sm-2 control-label"></label>
+
               <div class="col-sm-10">
-                  <p>Repeat every <input type="number" name="step" class="" value="2" min="2"> weeks.</p>
+                <p>Repeat every <input type="number" name="step" class="" value="2" min="2"> weeks.</p>
               </div>
             </div>
           {{/if}}
           <div class="form-group">
             <label class="col-sm-2 control-label">Repeat On</label>
+
             <div class="col-sm-10">
               {{#each state$week}}
-              <div class="checkbox">
-                <input type="checkbox" id="{{this}}" name="daysSelected" value="{{this}}">
-                <label for="{{this}}">
-                  {{this}}
-                </label>
-              </div>
+                <div class="checkbox">
+                  <input type="checkbox" id="{{this}}" name="daysSelected" value="{{this}}">
+                  <label for="{{this}}">
+                    {{this}}
+                  </label>
+                </div>
               {{/each}}
             </div>
           </div>
         {{/if}}
         <div class="form-group">
           <label class="col-sm-2 control-label">Repeat At</label>
+
           <div class="col-sm-10">
             <div class="input-group">
               <input type="text" name="repeatAt" class="form-control timepicker" value="{{state$repeatAt}}">
@@ -133,6 +144,7 @@
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">Starts On</label>
+
           <div class="col-sm-10">
             <div class="input-group">
               <input type="text" name="startsOn" class="form-control dateselecter" value="{{state$startsOn}}">
@@ -144,6 +156,7 @@
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">Ends</label>
+
           <div class="col-sm-10">
             <div class="radio">
               <input type="radio" id="radio" name="radioOption" data-doc="endsNever" checked>
@@ -168,22 +181,24 @@
       {{/if}}
       <div class="form-group">
         <label class="col-sm-2 control-label">Active Time</label>
+
         <div class="col-sm-10">
           <div class="input-group m-b">
             <input type="number" name="activeTime" class="form-control" placeholder="Active Time">
-            <span class="input-group-addon">mins</span> 
+            <span class="input-group-addon">mins</span>
           </div>
         </div>
       </div>
       <div class="form-group">
         <label class="col-sm-2 control-label">Labours' Wage</label>
+
         <div class="col-sm-10">
           <div class="input-group m-b">
             <span class="input-group-addon">$</span>
             <input type="text" name="avgWagePerHour" class="form-control" placeholder="Average Wage of a Worker per Hour">
             <span class="input-group-addon">/ hour</span>
           </div>
-        </div>   
+        </div>
       </div>
       <div class="row">
         <div class="col-sm-4 col-sm-offset-2">
@@ -201,4 +216,10 @@
     </div>
   {{/if}}
   <!-- /INGREDIENTS LIST -->
+
+  <!-- ADD INGREDIENT-->
+  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    {{> render component = 'submitIngredient'}}
+  </div>
+  <!-- /ADD INGREDIENT -->
 </template>
