--- a/client/lib/components/roster/roster_header/weekly_template_header/view.html
+++ b/client/lib/components/roster/roster_header/weekly_template_header/view.html
@@ -5,5 +5,10 @@
         Copy template shifts to week
       </a>
     </div>
+    <!-- CALENDAR -->
+    <div id="calendarModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      {{> render component='weekSelector'}}
+    </div>
+    <!-- /CALENDAR -->
   {{/if}}
 </template>
