--- a/client/lib/components/stock/stock_header/view.html
+++ b/client/lib/components/stock/stock_header/view.html
@@ -22,6 +22,11 @@
             </li>
           </ul>
         </div>
+        <!-- ADD INGREDIENT-->
+        <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          {{> render component = 'submitIngredient'}}
+        </div>
+        <!-- /ADD INGREDIENT -->
       {{/if}}
     {{/if}}
   </div>
