--- a/client/lib/components/stocktake/stocktake_header/view.html
+++ b/client/lib/components/stocktake/stocktake_header/view.html
@@ -5,5 +5,12 @@
         Start New Stocktake
       </a>
     </div>
+    <!-- NEW STOCKTAKE MODAL-->
+    {{#if canEditStock}}
+      <div class="modal fade" id="newStocktakeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        {{> render component = 'newStocktakeModal' name="stockModal"}}
+      </div>
+    {{/if}}
+    <!-- /NEW STOCKTAKE MODAL -->
   {{/if}}
 </template>
