Changing subscriprion methods in menu items list

--- a/client/lib/components/menuitems/menuitems_header/list_header/view.html
+++ b/client/lib/components/menuitems/menuitems_header/list_header/view.html
@@ -23,7 +23,7 @@
               <a href="{{pathFor route='submitMenuItem'}}">Add new menu</a>
             </li>
           {{/if}}
-          {{#if state$isMenuListSubscribed}}
+          {{#if state$isSubscribed}}
             <li><a href="#" class="unSubscribeMenuList"><i class="fa fa-lg fa-rss text-info"></i>
               Unsubscribe</a></li>
           {{else}}
