Fixing all menu items unsubscribe

--- a/client/lib/components/menuitems/menuitems_header/list_header/view.html
+++ b/client/lib/components/menuitems/menuitems_header/list_header/view.html
@@ -24,11 +24,9 @@
             </li>
           {{/if}}
           {{#if state$isSubscribed}}
-            <li><a href="#" class="unSubscribeMenuList"><i class="fa fa-lg fa-rss text-info"></i>
-              Unsubscribe</a></li>
+            <li><a href="#" class="subscribeMenuList"><i class="fa fa-lg fa-rss text-info"></i> Unsubscribe</a></li>
           {{else}}
-            <li><a href="#" class="subscribeMenuList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a>
-            </li>
+            <li><a href="#" class="subscribeMenuList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a></li>
           {{/if}}
         </ul>
       </div>
