--- a/client/lib/components/jobItems/jobitems_header/list_header/view.html
+++ b/client/lib/components/jobItems/jobitems_header/list_header/view.html
@@ -23,7 +23,7 @@
           {{/if}}
           <li>
             {{#if state$isSubscribed}}
-              <a href="#" class="unSubscribeJobsList"><i class="fa fa-lg fa-rss text-info"></i> Unsubscribe</a>
+              <a href="#" class="subscribeJobsList"><i class="fa fa-lg fa-rss text-info"></i> Unsubscribe</a>
             {{else}}
               <a href="#" class="subscribeJobsList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a>
             {{/if}}
