Refactoring helpers.js

--- a/client/lib/components/reports/current_stocks/item/view.html
+++ b/client/lib/components/reports/current_stocks/item/view.html
@@ -1,7 +1,7 @@
 <template name="currentStockData">
   {{#each state$stockIds}}
     <tr>
-      <td>{{stockById this}}</td>
+      <td>{{state$stockById this}}</td>
       {{#each state$countByDate this}}
         <td>{{this}}</td>
       {{/each}}
