--- a/client/lib/components/roster/weekly_figures/staff_cost/view.html
+++ b/client/lib/components/roster/weekly_figures/staff_cost/view.html
@@ -1,4 +1,4 @@
 <template name="staffCostTr">
-  <td>${{formatCurrency state$forecast}}</td>
-  <td class="{{state$class}}">${{formatCurrency state$actual}}</td>
+  <td>${{state$formatCurrency state$forecast}}</td>
+  <td class="{{state$class}}">${{state$formatCurrency state$actual}}</td>
 </template>
