--- a/client/lib/components/sales_prediction/filterByCategory/view.html
+++ b/client/lib/components/sales_prediction/filterByCategory/view.html
@@ -8,7 +8,7 @@
     <ul class="dropdown-menu text-capitalize filter-menus">
       {{#each state$categories}}
         <li>
-          <a href="/roster/prediction/{{state$year}}/{{state$week}}/{{this._id}}" class="">{{this.name}}</a>
+          <a href="{{pathFor route="salesPrediction" year=state$year week=state$week category=this._id}}" class="">{{this.name}}</a>
         </li>
       {{/each}}
     </ul>
