--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/worker-editable/worker-editable.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/worker-editable/worker-editable.html
@@ -1,4 +1,3 @@
 <template name="shiftBasicWorkerEditable">
-  <a href="#" class="select-worker" data-pk="{{assignedTo}}"
-     data-value="{{assignedTo}}"></a>
+  <a href="#" class="select-worker" data-value="{{assignedTo}}">{{username assignedTo}}</a>
 </template>
