--- a/client/lib/components/roster/weekly_figures/view.html
+++ b/client/lib/components/roster/weekly_figures/view.html
@@ -1,47 +1,7 @@
 <template name="weeklyFigures">
   <div class="collapse" id="collapse">
     <br>
-    {{>render component="figureBoxes"}}
-    <div class="row">
-      <div class="col-lg-12">
-        <table class="table table-striped table-condensed white-bg">
-          <thead data-pg-collapsed>
-          <tr>
-            <th></th>
-            {{#each state$weekDates}}
-              <th colspan="2">
-                {{weekDateName this}}
-                <h5>{{dateFormat this}}</h5>
-              </th>
-            {{/each}}
-          </tr>
-          </thead>
-          <thead data-pg-collapsed>
-          <tr>
-            <th></th>
-            {{#each state$weekDates}}
-              <th>Forecast</th>
-              <th>Actual</th>
-            {{/each}}
-          </tr>
-          </thead>
-          <tbody>
-          {{>render component="totalSalesRow"}}
-          <tr>
-            <td>Staff Cost ($)</td>
-            {{#each state$weekDates}}
-              {{> render component="staffCostTr" day=this}}
-            {{/each}}
-          </tr>
-          <tr>
-            <td>Staff Cost (%)</td>
-            {{#each state$weekDates}}
-              {{> render component="staffCostPercentagesTr" day=this}}
-            {{/each}}
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+    {{>render component="figureBoxes" figureBoxDataHelper = state$figureBoxDataHelper}}
+    {{>render component="rosterTable" weekDates = state$weekDates figureBoxDataHelper = state$figureBoxDataHelper}}
   </div>
 </template>
