--- a/client/lib/components/roster/roster_header/weekly_header/view.html
+++ b/client/lib/components/roster/roster_header/weekly_header/view.html
@@ -16,6 +16,6 @@
         <button class="btn btn-primary" id="publishRoster">Publish Roster</button>
       {{/if}}
     {{/if}}
-    {{>render component="weekPicker" year=state$year week=state$week onDateChanged=state$onDateChanged}}
+    {{>render component="weekPicker" year=state$currentDate.year week=state$currentDate.week onDateChanged=state$onDateChanged}}
   </div>
 </template>
