--- a/client/lib/components/sales_prediction/header_controls/view.html
+++ b/client/lib/components/sales_prediction/header_controls/view.html
@@ -1,5 +1,5 @@
 <template name="salesPredictionHeader">
   <div class="title-action prediction-header">
-    {{> render component="weekPicker" year=state$year week=state$week onDateChanged=state$onDateChanged}}
+    {{> render component="weekPicker" year=state$currentDate.year week=state$currentDate.week onDateChanged=state$onDateChanged}}
   </div>
 </template>
