--- a/client/lib/components/sections/view.html
+++ b/client/lib/components/sections/view.html
@@ -23,9 +23,9 @@
         </thead>
         <tbody>
         {{#each state$sections}}
-          <tr data-id="{{_id}}">
+          <tr>
             <td>
-              <a href="#" class="editSection">{{name}}</a>
+              <a href="#" class="editSection" data-id="{{_id}}">{{name}}</a>
             </td>
             <td>
               <i class="fa fa-trash deleteSection"></i>
