fixed view on table-roster, deleted dom manipulation in component

--- a/client/lib/components/roster/weekly_figures/rosterTable/staff_cost/view.html
+++ b/client/lib/components/roster/weekly_figures/rosterTable/staff_cost/view.html
@@ -1,4 +1,4 @@
 <template name="staffCostTr">
   <td>${{state$forecast}}</td>
-  <td class="{{state$class}}">${{state$actual}}</td>
+  <td class="{{state$textClass}}">${{state$actual}}</td>
 </template>
