--- a/client/lib/components/sales_prediction/view.html
+++ b/client/lib/components/sales_prediction/view.html
@@ -34,7 +34,7 @@
           </thead>
           <tbody>
           {{>render component="totalSalesRow"}}
-          {{#each getMenuItems}}
+          {{#each state$getMenuItems}}
             {{> render component="predictionSalesRow" currentWeekDate=state$currentWeekDate menuItem=this}}
           {{/each}}
           </tbody>
@@ -42,11 +42,16 @@
       </div>
     </div>
   </div>
-  {{#unless state$areAllItemsLoaded}}
+  {{#if state$allItemsLoaded}}
+    <br>
+    <div class="text-center">
+      <h4><b>All menu items are loaded</b></h4>
+    </div>
+  {{else}}
     <div>
       <button id="loadMoreBtn" class="btn btn-white center-block" type="button">
         Load more
       </button>
     </div>
-  {{/unless}}
+  {{/if}}
 </template>
