--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/view.html
@@ -16,7 +16,7 @@
       </div>
     {{/if}}
 
-    <ul class="sortable-list agile-list">
+    <ul class="sortable-list agile-list" data-current-date="{{state$currentDate}}">
       {{#each state$shifts}}
         {{> shiftBasic this}}
       {{/each}}
