--- a/client/lib/components/organizations/areas/area_settings/add_user_popup/invite_new_user/view.html
+++ b/client/lib/components/organizations/areas/area_settings/add_user_popup/invite_new_user/view.html
@@ -1,6 +1,8 @@
 <template name="inviteNewUser">
-  <input type="text" class="form-control" placeholder="Name" name="newUserName">
-  {{> render component='userRolesSelect'}}
+  <input type="text" class="form-control input-field" placeholder="Name" name="newUserName">
+  <div class="input-field">
+      {{> render component='userRolesSelect'}}
+  </div>
   <button class="btn btn-primary col-xs-12" type="submit">
     <i class="fa fa-check"></i>
   </button>
