--- a/client/lib/components/archiving/location_item/view.html
+++ b/client/lib/components/archiving/location_item/view.html
@@ -7,11 +7,11 @@
            aria-expanded="false" aria-controls="body-{{_id}}">
           {{name}}
         </a>
-        {{#if archived}}
-          <button class="btn btn-xs btn-danger pull-right archive-loc-btn">unarchive</button>
-        {{else}}
-          <button class="btn btn-xs btn-default pull-right archive-loc-btn">archive</button>
-        {{/if}}
+        {{#unless state$isCurrentLocation this._id}}
+          {{#with btnSettings this.archived}}
+            <button class="btn btn-xs {{btnClass}} pull-right archive-loc-btn">{{text}}</button>
+          {{/with}}
+        {{/unless}}
       </h4>
     </div>
   {{/with}}
