--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,5 +1,9 @@
 <head>
-    <meta charset="utf-8">
-    <title>Hospo Hero</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Hospo Hero</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="http://api.filepicker.io/v1/filepicker.js"></script>
+  <script type="text/javascript">
+    filepicker.setKey("AHMM0mI4mSnWPhmUyPYJcz");
+  </script>
 </head>
