--- a/client/lib/components/jobItems/edit/view.html
+++ b/client/lib/components/jobItems/edit/view.html
@@ -236,7 +236,7 @@
 
   <!-- ADD INGREDIENT-->
   <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    {{> render component = 'submitIngredient'}}
+    {{> render component = 'submitIngredient' isModal=true}}
   </div>
   <!-- /ADD INGREDIENT -->
 </template>
