--- a/client/lib/components/stock/modal_list/stock_list/view.html
+++ b/client/lib/components/stock/modal_list/stock_list/view.html
@@ -30,14 +30,10 @@
               </tbody>
             </table>
               <div class="alert alert-warning">If your stock item is not in the list, <a id="addNewIng" class="alert-link">click here</a> to add it. Once you save it, it will appear next time you search.</div>
+              {{> render component = "submitIngredient"  isModal=false}}
           </div>
         </div>
       </form>
     </div>
   </div>
-  <!-- ADD INGREDIENT-->
-  <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    {{> render component = 'submitIngredient'}}
-  </div>
-  <!-- /ADD INGREDIENT -->
 </template>
