--- a/client/lib/components/stock/stock_header/view.html
+++ b/client/lib/components/stock/stock_header/view.html
@@ -24,7 +24,7 @@
         </div>
         <!-- ADD INGREDIENT-->
         <div class="modal fade" id="addIngredientModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          {{> render component = 'submitIngredient'}}
+          {{> render component = 'submitIngredient' isModal=true}}
         </div>
         <!-- /ADD INGREDIENT -->
       {{/if}}
