changed invintations tab icon

--- a/client/lib/components/navigations/top/organization_buttons.html
+++ b/client/lib/components/navigations/top/organization_buttons.html
@@ -10,7 +10,7 @@
   {{/if}}
 
   {{#if canInvite}}
-    <span class="pull-right btn btn-sm btn-link open-flyout" data-id="invitationsList"><i class="fa fa-fw fa-user"></i></span>
+    <span class="pull-right btn btn-sm btn-link open-flyout" data-id="invitationsList"><i class="fa fa-fw fa-envelope"></i></span>
   {{/if}}
 
   {{#if isOrganizationOwner}}
