Buttons 'add' moved beside settings

--- a/client/lib/components/suppliers/master_list/list/view.html
+++ b/client/lib/components/suppliers/master_list/list/view.html
@@ -1,6 +1,6 @@
 <template name="suppliersList">
   <div class="ibox-content">
-    <a href="#addNewSupplierModal" data-toggle="modal" class="btn btn-primary pull-right">Add</a>
+    <!--<a href="#addNewSupplierModal" data-toggle="modal" class="btn btn-primary pull-right">Add</a>-->
     <br>
     <div class="table-responsive">
       <table class="table table-striped">
