--- a/client/lib/components/job-items/jobitems_header/list_header/view.html
+++ b/client/lib/components/job-items/jobitems_header/list_header/view.html
@@ -1,5 +1,6 @@
 <template name="jobListHeader">
   <div class="title-action">
+      <a class="btn btn-primary" href="{{pathFor route='submitJobItem'}}">Add new job</a>
     {{#if state$isArchived}}
       <a href="{{pathFor route='jobItemsMaster'}}" class="btn btn-info">
         <i class="fa fa-long-arrow-left"></i> Active Items
@@ -16,9 +17,6 @@
             <li>
               <a href="{{pathFor route='jobItemsMasterType' type='archive'}}">Archived
                 Items</a>
-            </li>
-            <li>
-              <a href="{{pathFor route='submitJobItem'}}">Add new job</a>
             </li>
           {{/if}}
           <li>
