--- a/client/lib/components/menuitems/menuitems_header/list_header/view.html
+++ b/client/lib/components/menuitems/menuitems_header/list_header/view.html
@@ -1,5 +1,6 @@
 <template name="menuListHeader">
   <div class="title-action">
+      <a class="btn btn-primary" href="{{pathFor route='submitMenuItem'}}">Add new menu</a>
     {{#if state$isArchived}}
       {{#linkTo route="menuItemsMaster" category="all" status="all" class="btn btn-info"}}
         <i class="fa fa-long-arrow-left"></i> Active Items
@@ -18,9 +19,6 @@
               {{#linkTo route="menuItemsMaster" category="all" status="archived"}}
                 Archive Items
               {{/linkTo}}
-            </li>
-            <li>
-              <a href="{{pathFor route='submitMenuItem'}}">Add new menu</a>
             </li>
           {{/if}}
           <li><a href="#" class="subscribeMenuList"><i class="fa fa-lg fa-rss text-muted"></i> Subscribe</a></li>
