--- a/client/lib/components/stock/stock_header/view.html
+++ b/client/lib/components/stock/stock_header/view.html
@@ -1,5 +1,6 @@
 <template name="stockHeader">
   <div class="title-action">
+      <a class="btn btn-primary" href="#addIngredientModal" data-toggle="modal">Add new stock</a>
     {{#if state$isArchived}}
       <a href="{{pathFor route='ingredientsList'}}" class="btn btn-info">
         <i class="fa fa-long-arrow-left"></i> Active Items
@@ -16,9 +17,6 @@
           <ul class="dropdown-menu" style="margin-left: -56px;">
             <li>
               <a href="{{pathFor route='ingredientsListType' type='archive'}}">Archived Items</a>
-            </li>
-            <li>
-              <a href="#addIngredientModal" data-toggle="modal">Add new stock</a>
             </li>
           </ul>
         </div>
