--- a/client/lib/components/reports/current_stocks/list/view.html
+++ b/client/lib/components/reports/current_stocks/list/view.html
@@ -1,15 +1,17 @@
 <template name="currentStocksReport">
-  <table class="dataTables-example table table-hover table-striped" id="dataTablesEx">
-    <thead>
+  <div class="table-scrollable">
+    <table class="dataTables-example table table-hover table-striped" id="dataTablesEx">
+      <thead>
       <tr>
         <th>Stock Item</th>
         {{#each state$week}}
           <th>{{this.day}} <br>{{this.date}}</th>
         {{/each}}
       </tr>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
       {{> render component="currentStockData"}}
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 </template>
