--- a/client/lib/components/reports/team_hours/view.html
+++ b/client/lib/components/reports/team_hours/view.html
@@ -1,24 +1,30 @@
 <template name="teamHours">
-  <div class="pull-right m-l-md m-t-xs">
-    <span class="label label-warning shiftView">Shifts</span>
-    <span class="label label-info hoursView">Hours</span>
-    <span class="label label-success showallView" id="showall_hideempty">Show All</span>
-  </div>
-  <table class="dataTables-example table table-hover table-striped" id="dataTablesEx">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Total Hours</th>
-        <th>Total Wage</th>
-        {{#each state$week}}
-        <th>{{this.day}} <br>{{this.date}}</th>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="pull-right m-l-md m-t-xs">
+        <span class="label label-warning shiftView">Shifts</span>
+        <span class="label label-info hoursView">Hours</span>
+        <span class="label label-success showallView" id="showall_hideempty">Show All</span>
+      </div>
+    </div>
+    <div class="col-xs-12 table-scrollable">
+      <table class="dataTables-example table table-hover table-striped" id="dataTablesEx">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Total Hours</th>
+          <th>Total Wage</th>
+          {{#each state$week}}
+            <th>{{this.day}} <br>{{this.date}}</th>
+          {{/each}}
+        </tr>
+        </thead>
+        <tbody>
+        {{#each state$users}}
+          {{> render component="teamHoursItem" user=this}}
         {{/each}}
-      </tr>
-    </thead>
-    <tbody>
-      {{#each state$users}}
-        {{> render component="teamHoursItem" user=this}}
-      {{/each}}
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </template>
