--- a/client/lib/components/sales_prediction/view.html
+++ b/client/lib/components/sales_prediction/view.html
@@ -5,7 +5,7 @@
   </div>
   <div class="prediction-component">
     <div class="prediction-panel">
-      <div class="sales-per-menu-item-section">
+      <div class="sales-per-menu-item-section table-scrollable">
         <table class="table table-striped table-condensed white-bg">
           <thead>
           <tr>
