--- a/client/lib/components/reports/team_hours/item/data/view.html
+++ b/client/lib/components/reports/team_hours/item/data/view.html
@@ -1,11 +1,13 @@
 <template name="reportData">
   {{#if state$shift}}
     {{#if state$shift.startedAt}}
-      <a href="#" class="editShiftStart" data-shift="{{state$shift._id}}" data-time="{{state$shift.startedAt}}">{{timeFormat state$shift.startedAt}}</a> - 
+      <a href="#" class="editShiftStart" data-shift="{{state$shift._id}}"
+         data-time="{{state$shift.startedAt}}">{{timeFormat state$shift.startedAt}}</a> -
       {{#if state$shift.finishedAt}}
-        <a href="#" class="editShiftEnd" data-shift="{{state$shift._id}}" data-time="{{state$shift.finishedAt}}">{{timeFormat state$shift.finishedAt}}</a>
+        <a href="#" class="editShiftEnd" data-shift="{{state$shift._id}}"
+           data-time="{{state$shift.finishedAt}}">{{timeFormat state$shift.finishedAt}}</a>
       {{else}}
-        {{#if state$currentShift}}
+        {{#if state$isCurrentShift}}
           <a href="#" class="stopCurrentShift" data-shift="{{state$shift._id}}" data-value="{{state$nowTime}}">Now</a>
         {{else}}
           <a href="#" class="editShiftEnd" data-shift="{{state$shift._id}}" data-value="{{state$endTime}}">End</a>
