--- a/client/lib/components/reports/team_hours/view.html
+++ b/client/lib/components/reports/team_hours/view.html
@@ -2,22 +2,21 @@
   <div class="pull-right m-l-md m-t-xs">
     <span class="label label-warning shiftView">Shifts</span>
     <span class="label label-info hoursView">Hours</span>
-    <span class="label label-success showallView" id="showall_hideempty">Show All</span>
   </div>
-  <table class="dataTables-example table table-hover table-striped" id="dataTablesEx">
+  <table class="table table-hover table-striped team-hours-table" id="dataTablesEx">
     <thead>
     <tr>
       <th>Name</th>
       <th>Total Hours</th>
       <th>Total Wage</th>
-      {{#each state$week}}
-        <th>{{this.day}} <br>{{this.date}}</th>
+      {{#each state$weekDays}}
+        <th>{{dayOfWeek this}} <br>{{formatDate this}}</th>
       {{/each}}
     </tr>
     </thead>
     <tbody>
     {{#each state$users}}
-      {{> render component="teamHoursItem" user=this}}
+      {{> render component="teamHoursItem" user=this tableViewMode=state$tableViewMode}}
     {{/each}}
     </tbody>
   </table>
