--- a/client/lib/components/job-items/detail/view.html
+++ b/client/lib/components/job-items/detail/view.html
@@ -48,7 +48,7 @@
                     <label>
                       Ingredients used
                     </label>
-                    <div>
+                    <div class="table-scrollable">
                       <table class="table table-hover thumbnail col-md-7">
                         <thead>
                           <tr>
