Adding areas color displaying

--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -8,6 +8,7 @@
         {{#if isInOrganization}}
           <li>
             <span class="open-flyout" data-id="organizationStructure">
+              <span class="area-color-icon" style="background-color: {{state$areaColor}};"></span>
               {{getCurrentArea.name}}
             </span>
           </li>
