--- a/client/lib/components/organizations/areas/create_area/view.html
+++ b/client/lib/components/organizations/areas/create_area/view.html
@@ -12,6 +12,14 @@
         {{> render component='selectComponent' name='locationId' values=state$locations selected=state$activeLocation}}
       </div>
     </div>
+
+    <div class="form-group">
+      <label class="col-sm-2 control-label">Area Color</label>
+      <div class="col-sm-10">
+        {{>render component="colorPicker" onColorChange=state$onColorChange}}
+      </div>
+    </div>
+
     <div class="btn-group col-xs-12">
       <button type="submit" class="btn btn-primary col-xs-6">Create</button>
       <button type="button" class="btn btn-default col-xs-6 close-flyout">Close</button>
