--- a/client/stylesheets/components/forecast.less
+++ b/client/stylesheets/components/forecast.less
@@ -7,7 +7,6 @@
 }
 
 .prediction-component {
-
   .panel {
     border: 1px solid @border-color;
     background: white;
@@ -20,16 +19,12 @@
       margin-bottom: 0;
     }
   }
-}
 
-//settings link functionality
-.revel-menu-link-component {
-  margin-top: 15px;
-  font-size: 16px;
-
-  .revel-link-menu-item-component {
-    &:hover {
-      background-color: @hover-gray-color;
-    }
+  .load-more-button-wrapper {
+    text-align: center;
+    margin: 10px 0;
   }
 }
+
+
+
