--- a/client/lib/components/navigations/top/view.html
+++ b/client/lib/components/navigations/top/view.html
@@ -33,6 +33,12 @@
             {{> render component="notifiFlyout"}}
           </div>
         </li>
+        <li class="dropdown">
+          <a class="" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-cog"></i>
+          </a>
+          {{> settingsDropdownMenu menuItems=state$settingsMenuItems}}
+        </li>
       </ul>
     </nav>
   </div>
