--- a/client/views/app/admin/list.html
+++ b/client/views/app/admin/list.html
@@ -1,62 +1,12 @@
 <template name="adminMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Admin"}}
+  {{> render component="pageHeading" title=templateData.title category="Settings"}}
   <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-md-12">
-        <div class="tabs-container">
-          <ul class="nav nav-tabs">
-            <li class="active">
-              <a href="#usersList" data-toggle="tab">Users</a>
-            </li>
-            <li class="">
-              <a href="#roles" data-toggle="tab">Roles</a>
-            </li>
-            <li class="">
-              <a href="#sections" data-toggle="tab">Sections</a>
-            </li>
-            <li class="">
-              <a href="#areas" data-toggle="tab">Stock Areas</a>
-            </li>
-            <li class="">
-              <a href="#timeout" data-toggle="tab">Inactivity Timeout</a>
-            </li>
-            <li class="">
-              <a href="#cron-config" data-toggle="tab">Cron Config</a>
-            </li>
-            <li class="">
-              <a href="#revel-link" data-toggle="tab">POS/ Menu Linking</a>
-            </li>
-            <li class="">
-              <a href="#archiving" data-toggle="tab">Locations/Areas archiving</a>
-            </li>
-          </ul>
-
-          <div class="tab-content">
-            <div class="tab-pane active" id="usersList">
-              {{> render component='usersList'}}
-            </div>
-            <div class="tab-pane" id="sections">
-              {{> render component='sections'}}
-            </div>
-            <div class="tab-pane" id="areas">
-              {{> render component='stockAreas'}}
-            </div>
-            <div class="tab-pane" id="timeout">
-              {{> render component='inactivityTimeoutField'}}
-            </div>
-            <div class="tab-pane" id="cron-config">
-              {{> render component="cronConfig"}}
-            </div>
-            <div class="tab-pane" id="roles">
-              {{> render component='rolesSettings'}}
-            </div>
-            <div class="tab-pane" id="revel-link">
-              {{> render component='revelMenuLink'}}
-            </div>
-            <div class="tab-pane" id="archiving">
-              {{> render component="locationAreaArchiving"}}
-            </div>
+        <div class="ibox">
+          <div class="ibox-content">
+            {{> render component=templateData.component}}
           </div>
         </div>
       </div>
