changed revelName to posNames and started to modify logic

--- a/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
@@ -7,7 +7,9 @@
 
       <div class="col-md-6">
         <a href="#" class="edit-revel-name">
-          {{state$revelName}}
+          {{#each state$posNames}}
+            {{>render component="posEditItem" name=this}}
+          {{/each}}
         </a>
       </div>
     {{/with}}
