--- a/client/lib/components/navigations/top/settings_dropdown_menu/dropdown_menu_item/view.html
+++ b/client/lib/components/navigations/top/settings_dropdown_menu/dropdown_menu_item/view.html
@@ -1,6 +1,6 @@
 <template name="dropdownMenuItem">
   <li>
-    <a href="{{pathFor route=item.route}}">
+    <a href="{{pathFor route=item.route data=routeParams}}">
       {{item.title}}
     </a>
   </li>
