--- a/client/lib/components/users/profile/profile_image/view.html
+++ b/client/lib/components/users/profile/profile_image/view.html
@@ -1,5 +1,5 @@
 <template name="profileImage">
-  <div class="ibox-content no-padding border-left-right profile-picture-div">
+  <div class="ibox-content border-left-right profile-picture-div">
     <div class="box-wrapper pull-right" style="display: none; position: absolute;">
       {{#if state$ifMe}}
         {{#if state$imageExists}}
