Removing jquery data table from team hours

--- a/client/lib/components/reports/team_hours/items_search/view.html
+++ b/client/lib/components/reports/team_hours/items_search/view.html
@@ -1,5 +1,7 @@
 <template name="teamHoursItemsSearch">
-  <div class="col-xs-12">
-    <input type="text" class="form-control" placeholder="Search by Name" />
+  <div class="row">
+    <div class="col-xs-12">
+      <input type="text" class="form-control" placeholder="Search by Name" />
+    </div>
   </div>
 </template>
