--- a/client/lib/components/reports/team_hours/view.html
+++ b/client/lib/components/reports/team_hours/view.html
@@ -1,7 +1,9 @@
 <template name="teamHours">
   <div class="row">
-    {{> render component="teamHoursItemsSearch" onKeyUp=state$onKeyUp}}
-    <div class="col-xs-12">
+    <div class="col-xs-10">
+      {{> render component="teamHoursItemsSearch" onKeyUp=state$onKeyUp}}
+    </div>
+    <div class="col-xs-2">
       <div class="pull-right m-l-md m-t-xs">
         <span class="label label-warning shiftView">Shifts</span>
         <span class="label label-info hoursView">Hours</span>
@@ -21,7 +23,7 @@
         </thead>
         <tbody>
         {{#each state$users}}
-          {{> render component="teamHoursItem" user=this tableViewMode=state$tableViewMode}}
+          {{> render component="teamHoursItem" user=this tableViewMode=state$tableViewMode limit=state$limit}}
         {{/each}}
         </tbody>
       </table>
