--- a/client/lib/components/reports/team_hours/items_search/view.html
+++ b/client/lib/components/reports/team_hours/items_search/view.html
@@ -1,4 +1,4 @@
-<template name="teamHoursItemsSearch">
+<template name="itemsSearch">
   <div class="row">
     <div class="col-xs-12">
       <input type="text" class="form-control" placeholder="Search by Name" />
