--- a/client/lib/components/reports/team_hours/view.html
+++ b/client/lib/components/reports/team_hours/view.html
@@ -1,7 +1,7 @@
 <template name="teamHours">
   <div class="row">
     <div class="col-xs-10">
-      {{> render component="teamHoursItemsSearch" onKeyUp=state$onKeyUp}}
+      {{> render component="itemsSearch" onKeyUp=state$onKeyUp}}
     </div>
     <div class="col-xs-2">
       <div class="pull-right m-l-md m-t-xs">
