--- a/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/pos-edit-item/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/pos-edit-item/view.html
@@ -1,3 +1,12 @@
 <template name="posEditItem">
-  {{state$getName}}
+  <div class="col-md-12">
+    <a href="#" class="edit-pos-name">
+      {{state$getName}}
+    </a>
+    <a href='#' class="delete-pos-name text-danger pull-right">
+      <i class="fa fa-trash"></i>
+    </a>
+  </div>
+
+
 </template>
