--- a/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
+++ b/client/lib/components/sales_prediction/revel_menu_link/revel_link_menu_item/view.html
@@ -1,16 +1,18 @@
 <template name="revelLinkMenuItem">
-  <div class="row list-group-item revel-link-menu-item-component">
+  <div class="row success-element revel-link-menu-item-component">
     {{#with state$menuItem}}
-      <div class="col-md-6">
-        {{name}}
-      </div>
-
-      <div class="col-md-6">
-        <a href="#" class="edit-revel-name">
-          {{#each state$posNames}}
-            {{>render component="posEditItem" name=this}}
-          {{/each}}
+      <div class="col-md-12">
+        <b>{{name}}</b>
+        <a href="#" class="pull-right text-info">
+          <i class="fa fa-plus-circle fa-lg add-pos-name"></i>
         </a>
+      </div>
+      <div class="col-md-12">
+        <div class="row">
+          {{#each state$posNames}}
+            {{>render component="posEditItem" name=this item=..}}
+          {{/each}}
+        </div>
       </div>
     {{/with}}
   </div>
