--- a/client/stylesheets/globals/base.import.less
+++ b/client/stylesheets/globals/base.import.less
@@ -18,7 +18,7 @@ body.full-height-layout #page-wrapper {
 }
 
 #page-wrapper {
-  min-height: auto;
+  min-height: inherit;
 }
 
 body.boxed-layout {
