--- a/client/stylesheets/globals/rtl.import.less
+++ b/client/stylesheets/globals/rtl.import.less
@@ -234,7 +234,7 @@ body.rtls .top-navigation .footer.fixed, body.rtls.top-navigation .footer.fixed 
   .body-small.rtls #page-wrapper {
     position: inherit;
     margin: 0 0 0 0px;
-    min-height: 1000px;
+    //min-height: 1000px;
   }
 
   .body-small.rtls .navbar-static-side {
