--- a/client/lib/components/navigations/navigation/view.html
+++ b/client/lib/components/navigations/navigation/view.html
@@ -1,5 +1,5 @@
 <template name="navigation">
-    <nav class="navbar-default navbar-static-side hidden-print" role="navigation" style="position: fixed">
+    <nav id="side-menu-nav-wrapper" class="navbar-default navbar-static-side hidden-print" role="navigation">
         <div class="sidebar-collapse">
             <a class="close-canvas-menu"><i class="fa fa-times"></i></a>
 
