--- a/client/lib/components/navigations/navigation/menuEntry/sub_menu_item.less
+++ b/client/lib/components/navigations/navigation/menuEntry/sub_menu_item.less
@@ -1,11 +1,41 @@
+#side-menu-nav-wrapper {
+  position: fixed;
+  bottom: 0;
+  overflow-y: auto;
+  top: 0;
+}
 .slider {
-  display: none;
+  height: 0;
+  overflow: hidden;
+  transition: height 300ms;
 }
-
-.nav-first-level-item:hover .slider {
-  display: block;
+.nav-first-level-item.active {
+  .slider {
+    height: auto;
+  }
 }
-
-.nav-first-level-item.active .slider {
-  display: block;
+.slide-down {
+  transition: height 300ms;
+}
+.nav-first-level-item:hover {
+  .slider.slider-for-5-elements {
+    height: 170px;
+    .slide-down;
+  }
+  .slider.slider-for-4-elements {
+    height: 138px;
+    .slide-down;
+  }
+  .slider.slider-for-3-elements {
+    height: 106px;
+    .slide-down;
+  }
+  .slider.slider-for-2-elements {
+    height: 74px;
+    .slide-down;
+  }
+  .slider.slider-for-1-elements {
+    height: 42px;
+    .slide-down;
+}
 }
